add anti csrf token

--- a/MVC5TDDExperiments/Views/Home/Create.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Create.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginForm()) 
 {
+    <!-- regenerated for every query: -->
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
